fixed div jumping

--- a/client/styles/home.less
+++ b/client/styles/home.less
@@ -5,7 +5,6 @@
     .first-section {
         background-image: url('../images/Home/coversharks-home-mobile-hero.png');
         background-size: cover;
-        height: 40em;
         text-align: center;
     }
     .second-section {
